force-app/main/default/objects/JBCXM__Report__c/JBCXM__Report__c.object-meta.xml
<CustomObject>
    <label>Report</label>
    <nameField>
        <label>Report Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>