force-app/main/default/objects/JBCXM__Report__c/fields/JBCXM__EntityType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EntityType__c</fullName>
    <label>Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>