force-app/main/default/objects/JBCXM__Report__c/fields/JBCXM__MetaData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MetaData__c</fullName>
    <label>MetaData</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>