force-app/main/default/objects/JBCXM__Report__c/fields/JBCXM__OverallDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OverallDisplayOrder__c</fullName>
    <label>Overall Display Order</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>