force-app/main/default/objects/JBCXM__Report__c/fields/JBCXM__ReportParams__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportParams__c</fullName>
    <label>ReportParams</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>