force-app/main/default/objects/JBCXM__Report__c/fields/JBCXM__Template__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Template__c</fullName>
    <label>Template</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>